# tla2langgraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
specs/001-tla-to-langgraph/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tla-to-langgraph/checklists/: requirements.md
specs/001-tla-to-langgraph/contracts/: api-contract.md  cli-contract.md
src/tla2langgraph/: __init__.py  cli.py  models.py
src/tla2langgraph/generator/: __init__.py  skeleton.py
src/tla2langgraph/generator/templates/: skeleton.py.j2
src/tla2langgraph/parser/: __init__.py  graph_builder.py  tla_parser.py
src/tla2langgraph/server/: __init__.py  app.py  routes.py
src/tla2langgraph/web/: app.js  index.html
tests/fixtures/: empty_next.tla  simple_mutex.tla  traffic_light.tla
tests/integration/: test_api.py  test_benchmark.py  test_e2e.py
tests/unit/: test_cli.py  test_graph_builder.py  test_graph_builder_extra.py  test_models.py  test_skeleton.py  test_tla_parser.py
