[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tla2langgraph"
version = "0.1.0"
description = "Draw state machines from TLA+ specifications and export LangGraph Python skeletons"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-tlaplus>=1.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "typer>=0.12",
]

[project.scripts]
tla2langgraph = "tla2langgraph.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tla2langgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tla2langgraph --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90", "N"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]
